# single_buffer_channel

./: .travis.yml  Cargo.toml  README.md
benches/: bench_channel.rs  cpu_consumption_during_recv.rs
examples/: bench_channel.rs  wait_recv.rs
src/: lib.rs
