[package]
name = "latest_value_channel"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"
description = "Multi-producer, single-consumer LATEST data communication primitives."
license = "MIT"
repository = "https://github.com/Amelia10007/latest_value_channel"
keywords = ["concurrency", "channel", "mpsc"]
categories = ["concurrency", "data-structures"]

[dependencies]
spin = "0.7"

[[bench]]
name = "bench_channel"
harness = false

[[bench]]
name = "cpu_consumption_during_recv"
harness = false

[badges]
travis-ci = { repository = "Amelia10007/latest_value_channel", branch = "master" }
