[package]
name = "single_buffer_channel"
description = "Multi-producer, single-consumer single value communication primitives."
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"
repository = "https://github.com/Amelia10007/single_buffer_channel"
keywords = ["concurrency", "channel", "std"]
categories = ["concurrency"]
licence = "MIT"

[[bench]]
name = "bench_channel"
harness = false

[[bench]]
name = "cpu_consumption_during_recv"
harness = false
